--- a/media/css/sandstone/fonts.less
+++ b/media/css/sandstone/fonts.less
@@ -47,12 +47,23 @@
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Open Sans Light';
     src: url('/media/fonts/OpenSans-Semibold-webfont.eot');
     src: url('/media/fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
          url('/media/fonts/OpenSans-Semibold-webfont.woff') format('woff'),
          url('/media/fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
          url('/media/fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('/media/fonts/OpenSans-Bold-webfont.eot');
+    src: url('/media/fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/media/fonts/OpenSans-Bold-webfont.woff') format('woff'),
+         url('/media/fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
+         url('/media/fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
